# zed_wrapper

./: CMakeLists.txt  README.md  package.xml
cfg/: config_zed.json
launch/: zed_camera.launch
src/: main.cpp
